JavaCC/src/qopt/PlSql.java
/* Generated By:JJTree&JavaCC: Do not edit this line. PlSql.java */
package qopt;

import java.io.Reader;
import java.io.FileInputStream;
import java.util.HashSet;
import java.util.Set;
import java.util.Iterator;





@SuppressWarnings("all")
class PlSql/*@bgen(jjtree)*/implements PlSqlTreeConstants, PlSqlConstants {/*@bgen(jjtree)*/
  protected JJTPlSqlState jjtree = new JJTPlSqlState();
public class MultiplyOp extends SimpleNode {
  private int op;
        public MultiplyOp(int id) {
    super(id);
  }

  public MultiplyOp(PlSql p, int id) {
    super(p, id);
  }

  public void setOper(int x){
          op =x;
  }

  public int getOper(){
          return op;
  }
}

public class SimpleOp extends SimpleNode {
        private int op;
        public SimpleOp(int id) {
    super(id);
  }

  public SimpleOp(PlSql p, int id) {
    super(p, id);
  }

  public void setOper(int x){
          op =x;
  }

  public int getOper(){
          return op;
  }

}

public class UnaryExp extends SimpleNode {
        private int sign;
        public UnaryExp(int id) {
    super(id);
  }

  public UnaryExp(PlSql p, int id) {
    super(p, id);
  }

  public void setSign(int x){
          sign =x;
  }

  public int getSign(){
          return sign;
  }
}

    /** Parse PL/SQL from files.  Each arg is expected to be the name of a file,
        or "-" to indicate System.in.
     */
    public static void main( String args[] ) throws Throwable {
        if (args.length < 1) {
            args = new String[] {"-"};
        }
        for (int a = 0; a < args.length; ++a) {
            final String input = args[a];
            final PlSql parser = new PlSql("-".equals(input) ? System.in : new FileInputStream(input));
            try {
                SimpleNode rootNode = parser.CompilationUnit();
                rootNode.dump("t");
            } catch(Throwable t) {
                System.err.println(input + ":1: not parsed");
                t.printStackTrace();
            }
            Iterator  it = parser.tables.iterator();
            System.out.println(it.next() + " tables in " + input);
        }
    }

    public Set<String> functions = new HashSet<String>();
    public Set<String> procedures = new HashSet<String>();
    public Set<String> tables = new HashSet<String>();

    public void reInit(Reader input) {
        ReInit(input);
        functions.clear();
        procedures.clear();
        tables.clear();
    }

    private String lastObjectReference = null;

    protected boolean seeTYPE() {
        return "TYPE".equalsIgnoreCase(getToken(1).image);
    }

/* Represents a PLSQL code block. */
  final public SimpleNode CompilationUnit() throws ParseException {
 /*@bgen(jjtree) Root */
  Root jjtn000 = new Root(this, JJTROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      QueryStatement();
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                     {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void QueryStatement() throws ParseException {
    SelectStatement();
    jj_consume_token(152);
  }

  final public void SelectStatement() throws ParseException {
    SelectWithoutOrder();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_ORDER:
      OrderByClause();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
  }

  final public void SelectWithoutOrder() throws ParseException {
    SelectSet();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_INTERSECT:
      case K_MINUS:
      case K_UNION:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_UNION:
        jj_consume_token(K_UNION);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_ALL:
          jj_consume_token(K_ALL);
          break;
        default:
          jj_la1[2] = jj_gen;
          ;
        }
        break;
      case K_INTERSECT:
        jj_consume_token(K_INTERSECT);
        break;
      case K_MINUS:
        jj_consume_token(K_MINUS);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      SelectSet();
    }
  }

  final public void SelectSet() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_SELECT:
      Select();
      break;
    case 153:
      jj_consume_token(153);
      SubQuery();
      jj_consume_token(154);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Select() throws ParseException {
 /*@bgen(jjtree) Sel */
  Sel jjtn000 = new Sel(this, JJTSEL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_SELECT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_ALL:
      case K_DISTINCT:
      case K_UNIQUE:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_ALL:
          jj_consume_token(K_ALL);
          break;
        case K_DISTINCT:
          jj_consume_token(K_DISTINCT);
          break;
        case K_UNIQUE:
          jj_consume_token(K_UNIQUE);
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
                                                 Proj jjtn001 = new Proj(this, JJTPROJ);
                                                 boolean jjtc001 = true;
                                                 jjtree.openNodeScope(jjtn001);
      try {
        SelectList();
      } catch (Throwable jjte001) {
                                                 if (jjtc001) {
                                                   jjtree.clearNodeScope(jjtn001);
                                                   jjtc001 = false;
                                                 } else {
                                                   jjtree.popNode();
                                                 }
                                                 if (jjte001 instanceof RuntimeException) {
                                                   {if (true) throw (RuntimeException)jjte001;}
                                                 }
                                                 if (jjte001 instanceof ParseException) {
                                                   {if (true) throw (ParseException)jjte001;}
                                                 }
                                                 {if (true) throw (Error)jjte001;}
      } finally {
                                                 if (jjtc001) {
                                                   jjtree.closeNodeScope(jjtn001, true);
                                                 }
      }
      From jjtn002 = new From(this, JJTFROM);
      boolean jjtc002 = true;
      jjtree.openNodeScope(jjtn002);
      try {
        FromClause();
      } catch (Throwable jjte002) {
      if (jjtc002) {
        jjtree.clearNodeScope(jjtn002);
        jjtc002 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte002 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte002;}
      }
      if (jjte002 instanceof ParseException) {
        {if (true) throw (ParseException)jjte002;}
      }
      {if (true) throw (Error)jjte002;}
      } finally {
      if (jjtc002) {
        jjtree.closeNodeScope(jjtn002, true);
      }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_WHERE:
        where jjtn003 = new where(this, JJTWHERE);
        boolean jjtc003 = true;
        jjtree.openNodeScope(jjtn003);
        try {
          WhereClause();
        } catch (Throwable jjte003) {
        if (jjtc003) {
          jjtree.clearNodeScope(jjtn003);
          jjtc003 = false;
        } else {
          jjtree.popNode();
        }
        if (jjte003 instanceof RuntimeException) {
          {if (true) throw (RuntimeException)jjte003;}
        }
        if (jjte003 instanceof ParseException) {
          {if (true) throw (ParseException)jjte003;}
        }
        {if (true) throw (Error)jjte003;}
        } finally {
        if (jjtc003) {
          jjtree.closeNodeScope(jjtn003, true);
        }
        }
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_GROUP:
      case K_HAVING:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_HAVING:
          HavingClause();
          GroupByClause();
          break;
        case K_GROUP:
          GroupByClause();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case K_HAVING:
            HavingClause();
            break;
          default:
            jj_la1[8] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/* Checks for whatever follows  SELECT */
  final public void SelectList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 155:
      jj_consume_token(155);
      break;
    case K_NULL:
    case S_NUMBER:
    case S_IDENTIFIER:
    case S_CHAR_LITERAL:
    case S_QUOTED_IDENTIFIER:
    case 153:
    case 159:
    case 160:
      SelectItem();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 156:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_2;
        }
        jj_consume_token(156);
        SelectItem();
      }
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void SelectItem() throws ParseException {
    if (jj_2_1(2)) {
      OracleObjectName();
      jj_consume_token(157);
    } else if (jj_2_2(4)) {
      OracleObjectName();
      jj_consume_token(158);
      OracleObjectName();
      jj_consume_token(157);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_NULL:
      case S_NUMBER:
      case S_IDENTIFIER:
      case S_CHAR_LITERAL:
      case S_QUOTED_IDENTIFIER:
      case 153:
      case 159:
      case 160:
        SQLSimpleExpression();
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_AS:
    case K_RETURNING:
    case K_WHEN:
    case S_IDENTIFIER:
    case S_QUOTED_IDENTIFIER:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_AS:
        jj_consume_token(K_AS);
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      SelectItemAlias();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  final public void SelectItemAlias() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case S_IDENTIFIER:
    case S_QUOTED_IDENTIFIER:
      OracleObjectName();
      break;
    case K_RETURNING:
      jj_consume_token(K_RETURNING);
      break;
    case K_WHEN:
      jj_consume_token(K_WHEN);
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void SubQuery() throws ParseException {
    SelectStatement();
  }

  final public void FromClause() throws ParseException {
    jj_consume_token(K_FROM);
    TableReference();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 156:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_3;
      }
      jj_consume_token(156);
      TableReference();
    }
  }

  final public void WhereClause() throws ParseException {
    jj_consume_token(K_WHERE);
    SQLExpression();
  }

  final public void GroupByClause() throws ParseException {
    jj_consume_token(K_GROUP);
    jj_consume_token(K_BY);
    SQLExpressionList();
  }

  final public void HavingClause() throws ParseException {
    jj_consume_token(K_HAVING);
    SQLExpression();
  }

  final public void OrderByClause() throws ParseException {
    jj_consume_token(K_ORDER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_SIBLINGS:
      jj_consume_token(K_SIBLINGS);
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    jj_consume_token(K_BY);
    OrderByExpression();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 156:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_4;
      }
      jj_consume_token(156);
      OrderByExpression();
    }
  }

  final public void OrderByExpression() throws ParseException {
    SQLSimpleExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_ASC:
    case K_DESC:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_ASC:
        jj_consume_token(K_ASC);
        break;
      case K_DESC:
        jj_consume_token(K_DESC);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
  }

  final public String OracleObjectName() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case S_IDENTIFIER:
      jj_consume_token(S_IDENTIFIER);
                           {if (true) return token.image;}
      break;
    case S_QUOTED_IDENTIFIER:
      jj_consume_token(S_QUOTED_IDENTIFIER);
                           String s = token.image; {if (true) return s.substring(1, s.length() - 1);}
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void TableReference() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_ONLY:
      jj_consume_token(K_ONLY);
      jj_consume_token(153);
      QueryTableExpression();
      jj_consume_token(154);
      break;
    case S_IDENTIFIER:
    case S_QUOTED_IDENTIFIER:
    case 153:
      QueryTableExpression();
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
